# osapi

./: Cargo.toml  README.md  all_source_code.txt
examples/: full_chain.rs  full_flow.rs  private_endpoints.rs
src/: auth.rs  client.rs  error.rs  lib.rs  logging.rs
src/api/: admin.rs  campuses.rs  colleges.rs  groups.rs  mod.rs  parser.rs  schedules.rs
src/models/: call.rs  campus.rs  college.rs  group.rs  lesson.rs  mod.rs  requests.rs  schedule.rs
src/utils/: date_serde.rs  mod.rs  time_serde.rs
tests/: integration.rs  lesson.rs
