[package]
name = "osars"
version = "0.1.0"
edition = "2024"

[lib]
name = "osapi"
source = "src/lib.rs"

[features]
default = []
logging = ["tracing"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
mockito = "1.7.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20" , features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
